--- a/style.css
+++ b/style.css
@@ -121,6 +121,8 @@ main {
     background: linear-gradient(320deg, #2E325A, #0E112A) border-box;
     border-radius: 50em;
     border: 20px solid transparent;
+    margin: 0 auto;
+    position: relative;
 }
 .timer {
     aspect-ratio: 1/1;
@@ -183,8 +185,6 @@ main {
 }
 
 [data-theme-font="mono"] .timer #duration {
-    font-size: 5.85rem;
-    font-weight: 400;
     letter-spacing: -6px;
 }
 [data-theme-font="mono"] .timer #duration span:nth-child(1),
@@ -194,6 +194,7 @@ main {
 
 [data-theme-font="serif"] .timer #duration span:nth-child(1),
 [data-theme-font="serif"] .timer #duration span:nth-child(3) {
+    font-weight: 400;
     width: 104px;
 }
 
@@ -246,7 +247,8 @@ main {
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
-    top: calc(170px + 12%);
+    /* top: calc(170px + 13%); */
+    top: 22%;
     font-size: 1rem;
     font-weight: 700;
     letter-spacing: 15px;
@@ -255,7 +257,7 @@ main {
     background: none;
     border: none;
     color: var(--c-white);
-    padding: 1rem .5rem 1rem 13px;
+    padding: 1rem 0.3rem 1rem 1rem;
     opacity: 1;
     pointer-events: auto;
     transition: opacity .1s, color .2s;
@@ -479,6 +481,9 @@ main {
     }
     .timer #duration {
         font-size: 6.125rem;
+    }
+    [data-theme-font="mono"] .timer #duration {
+        font-size: 5.85rem;
     }
 }
 
